# ambient-expense-agent

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  agents-cli-manifest.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  eval.yml  integration.yml  security.yml
artifacts/grade_results/: .gitkeep
artifacts/traces/: .gitkeep
expense_agent/: agent.py  config.py  fast_api_app.py
submission_frontend/: main.py  pyproject.toml  requirements.txt
tests/eval/: eval_config.yaml  generate_traces.py
tests/eval/datasets/: basic-dataset.json
tests/integration/: test_agent.py  test_server_e2e.py
