[project]
name = "submission-frontend"
version = "0.1.0"
description = "Manager Approval Dashboard Service"
dependencies = [
    "fastapi>=0.100.0,<1.0.0",
    "uvicorn>=0.20.0,<1.0.0",
    "google-cloud-aiplatform[agent-engines,evaluation]>=1.156.0",
    "google-adk[gcp]>=2.0.0,<3.0.0",
]

[tool.uv]
dev-dependencies = []
